# cookies

./: .gitignore  LICENSE  README.md  example-config.json  main.py  pyproject.toml
etl/: products.py  sales.py  stores.py
source_data/: stores.json
