[tool.poetry]
name = "cookies-demo"
version = "0.1.0"
description = "A demo for the Cookies team."
authors = ["Zachary Braun <zacharytbraun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.6"
pydantic = "^1.9.0"
us = "^2.0.2"
shortuuid = "^1.0.8"
Faker = "^11.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
